From disparity map to depth map

--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -33,6 +33,7 @@
     "    visualize_disparity,\n",
     "    postprocess_disparity,\n",
     "    create_point_cloud,\n",
+    "    disparity_to_depth_map,\n",
     ")"
    ]
   },
@@ -203,6 +204,9 @@
     "disparity_map_viz = visualize_disparity(disparity_map, mask=mask_rectified)\n",
     "# Postprocess disparity map\n",
     "disparity_map_proc = postprocess_disparity(disparity_map, mask=mask_rectified)\n",
+    "# depth map\n",
+    "depth_map = disparity_to_depth_map(disparity_map, K, distance_between_cameras, scale)\n",
+    "depth_map_proc = postprocess_disparity(depth_map, mask=mask_rectified)\n",
     "\n",
     "# show disparity map with matplotlib\n",
     "plt.imshow(disparity_map_viz)\n",
@@ -218,7 +222,7 @@
    "outputs": [],
    "source": [
     "# save disparity map as numpy file\n",
-    "np.save(f'../output/disp/disparity_map_{image_name}.npy', disparity_map_proc)"
+    "np.save(f'../output/disp/disparity_map_{image_name}.npy', depth_map_proc)"
    ]
   },
   {
