Better visualization of depth map

--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -206,11 +206,21 @@
     "disparity_map_proc = postprocess_disparity(disparity_map, mask=mask_rectified)\n",
     "# depth map\n",
     "depth_map = disparity_to_depth_map(disparity_map, K, distance_between_cameras, scale)\n",
-    "depth_map_proc = postprocess_disparity(depth_map, mask=mask_rectified)\n",
-    "\n",
+    "# post process depth map\n",
+    "depth_map_proc = postprocess_disparity(depth_map, mask=mask_rectified)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536f3a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# show disparity map with matplotlib\n",
-    "plt.imshow(disparity_map_viz)\n",
-    "plt.axis('off')\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "im1 = plt.imshow(depth_map_proc, cmap='jet')\n",
+    "plt.colorbar(im1, label='Depth (m)')\n",
     "plt.show()"
    ]
   },
