--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -166,6 +166,31 @@
     "kernel = np.ones((kernel_size, kernel_size), np.uint8)\n",
     "left_mask = cv2.erode(left_mask, kernel, iterations=iterations)\n",
     "\n",
+    "# Find connected components and keep only the largest one\n",
+    "left_mask_uint8 = left_mask.astype(np.uint8)\n",
+    "num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(left_mask_uint8, connectivity=8)\n",
+    "\n",
+    "# Find the largest component (excluding background which is label 0)\n",
+    "if num_labels > 1:\n",
+    "    largest_component_label = 1 + np.argmax(stats[1:, cv2.CC_STAT_AREA])\n",
+    "    left_mask = (labels == largest_component_label).astype(np.float32) * 255\n",
+    "else:\n",
+    "    left_mask = np.zeros_like(left_mask)\n",
+    "\n",
+    "# Create a copy for flood fill\n",
+    "h, w = left_mask_uint8.shape\n",
+    "flood_fill_mask = np.zeros((h + 2, w + 2), np.uint8)\n",
+    "left_mask_copy = left_mask_uint8.copy()\n",
+    "\n",
+    "# Flood fill from all border pixels\n",
+    "cv2.floodFill(left_mask_copy, flood_fill_mask, (0, 0), 255)\n",
+    "\n",
+    "# Invert the flood filled image and combine with original\n",
+    "left_mask_inv = cv2.bitwise_not(left_mask_copy)\n",
+    "left_mask_filled = left_mask_uint8 | left_mask_inv\n",
+    "\n",
+    "left_mask = left_mask_filled.astype(np.float32)\n",
+    "\n",
     "mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
     "mask_rectified = cv2.resize(\n",
     "    mask_rectified,\n",
