--- a/notebooks/4.0_Pcd_align.ipynb
+++ b/notebooks/4.0_Pcd_align.ipynb
@@ -37,11 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_pcd = o3d.io.read_point_cloud('../output/pcd/20250429_105703_0.ply')\n",
-    "target_left_img = cv2.imread('../data/left/left_20250429_105703_0.png')\n",
+    "target_filename = 'left_20250917_153919_0'\n",
+    "target_pcd = o3d.io.read_point_cloud(f'../output/pcd/{target_filename}.ply')\n",
+    "target_left_img = cv2.imread(f'../data/left_anomaly_2/{target_filename}.png')\n",
     "\n",
-    "source_pcd = o3d.io.read_point_cloud('../output/pcd/20250429_110523_21.ply')\n",
-    "source_left_img = cv2.imread('../data/left/left_20250429_110523_21.png')"
+    "source_filename = 'left_20250917_154535_7'\n",
+    "source_pcd = o3d.io.read_point_cloud(f'../output/pcd/{source_filename}.ply')\n",
+    "source_left_img = cv2.imread(f'../data/left_anomaly_2/{source_filename}.png')"
    ]
   },
   {
