--- a/notebooks/3.0_Stereo_inference_masked.ipynb
+++ b/notebooks/3.0_Stereo_inference_masked.ipynb
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d25d3ea",
+   "metadata": {},
+   "source": [
+    "#### Loading models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "879b439e",
@@ -59,13 +67,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74f2d55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# choose if mask is required.\n",
+    "# 'model' - load segmentation model,\n",
+    "# 'image' - load image,\n",
+    "# None - do nothing\n",
+    "\n",
+    "mask_method = None\n",
+    "if mask_method is None:\n",
+    "    mask_rectified = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "66224883",
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_inference = SegmentationInferenceOnnx(\n",
-    "    model_path='../models/unet++_lab_seat_segmentation.onnx'\n",
-    ")"
+    "if mask_method == 'model':\n",
+    "    # Load segmentation model\n",
+    "    segmentation_inference = SegmentationInferenceOnnx(\n",
+    "        model_path='../models/unet++_lab_seat_segmentation.onnx'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac487c8",
+   "metadata": {},
+   "source": [
+    "#### Loading images"
    ]
   },
   {
@@ -76,9 +111,9 @@
    "outputs": [],
    "source": [
     "# load images\n",
-    "image_name = '20250429_105703_0'\n",
-    "left_image = cv2.imread('../data/left/left_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
-    "right_image = cv2.imread('../data/right/right_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
+    "image_name = '20250917_154307_2'\n",
+    "left_image = cv2.imread('../data/left_anomaly_2/left_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
+    "right_image = cv2.imread('../data/right_anomaly_2/right_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
     "\n",
     "# Rectify images\n",
     "left_rectified = rectify_image(left_image, stereo_map_left)\n",
@@ -118,91 +153,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd8020bd",
+   "metadata": {},
+   "source": [
+    "#### Seat segmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "310a7ccb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_image_mask = left_image.copy()\n",
-    "left_image_mask = cv2.cvtColor(left_image_mask, cv2.COLOR_BGR2RGB)\n",
-    "left_image_mask = cv2.resize(left_image_mask, (segmentation_inference.input_width, segmentation_inference.input_height))\n",
-    "left_image_mask = left_image_mask.astype(np.float32) / 255.0\n",
-    "left_image_mask = np.transpose(left_image_mask, (2, 0, 1))\n",
-    "left_image_tensor = np.expand_dims(left_image_mask, axis=0)\n",
-    "# left_image_to_display = Image.fromarray((np.transpose(left_image_tensor[0], (1, 2, 0)) * 255).astype(np.uint8))\n",
-    "# display(left_image_to_display)"
+    "if mask_method == 'model':\n",
+    "    left_image_mask = left_image.copy()\n",
+    "    left_image_mask = cv2.cvtColor(left_image_mask, cv2.COLOR_BGR2RGB)\n",
+    "    left_image_mask = cv2.resize(left_image_mask, (segmentation_inference.input_width, segmentation_inference.input_height))\n",
+    "    left_image_mask = left_image_mask.astype(np.float32) / 255.0\n",
+    "    left_image_mask = np.transpose(left_image_mask, (2, 0, 1))\n",
+    "    left_image_tensor = np.expand_dims(left_image_mask, axis=0)\n",
+    "\n",
+    "    left_mask = segmentation_inference(left_image_tensor)\n",
+    "    left_mask = np.squeeze(left_mask)\n",
+    "    left_mask = 1 / (1 + np.exp(-left_mask))\n",
+    "    left_mask = (left_mask > 0.5).astype(np.float32) * 255\n",
+    "    left_mask = cv2.resize(\n",
+    "        left_mask,\n",
+    "        (left_image.shape[1], left_image.shape[0]),\n",
+    "        interpolation=cv2.INTER_LINEAR,\n",
+    "    )\n",
+    "    # left_mask_to_display = Image.fromarray((left_mask).astype(np.uint8))\n",
+    "    # display(left_mask_to_display)\n",
+    "\n",
+    "    # prepare mask for rectified image size\n",
+    "    kernel = np.ones((5, 5), np.uint8)\n",
+    "    left_mask = cv2.erode(left_mask, kernel, iterations=6)\n",
+    "\n",
+    "    # Find connected components and keep only the largest one\n",
+    "    left_mask_uint8 = left_mask.astype(np.uint8)\n",
+    "    num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(left_mask_uint8, connectivity=8)\n",
+    "\n",
+    "    # Find the largest component (excluding background which is label 0)\n",
+    "    if num_labels > 1:\n",
+    "        largest_component_label = 1 + np.argmax(stats[1:, cv2.CC_STAT_AREA])\n",
+    "        left_mask = (labels == largest_component_label).astype(np.float32) * 255\n",
+    "    else:\n",
+    "        left_mask = np.zeros_like(left_mask)\n",
+    "\n",
+    "    # Create a copy for flood fill\n",
+    "    h, w = left_mask_uint8.shape\n",
+    "    flood_fill_mask = np.zeros((h + 2, w + 2), np.uint8)\n",
+    "    left_mask_copy = left_mask_uint8.copy()\n",
+    "\n",
+    "    # Flood fill from all border pixels\n",
+    "    cv2.floodFill(left_mask_copy, flood_fill_mask, (0, 0), 255)\n",
+    "\n",
+    "    # Invert the flood filled image and combine with original\n",
+    "    left_mask_inv = cv2.bitwise_not(left_mask_copy)\n",
+    "    left_mask_filled = left_mask_uint8 | left_mask_inv\n",
+    "\n",
+    "    left_mask = left_mask_filled.astype(np.float32)\n",
+    "\n",
+    "    mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
+    "    mask_rectified = cv2.resize(\n",
+    "        mask_rectified,\n",
+    "        (stereo_model.input_width, stereo_model.input_height),\n",
+    "        interpolation=cv2.INTER_LINEAR,\n",
+    "    )\n",
+    "\n",
+    "    # show mask\n",
+    "    plt.imshow(mask_rectified, cmap='gray')\n",
+    "    plt.title('Left Mask Image')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b52aa97",
+   "id": "86b88c4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_mask = segmentation_inference(left_image_tensor)\n",
-    "left_mask = np.squeeze(left_mask)\n",
-    "left_mask = 1 / (1 + np.exp(-left_mask))\n",
-    "left_mask = (left_mask > 0.5).astype(np.float32) * 255\n",
-    "left_mask = cv2.resize(\n",
-    "    left_mask,\n",
-    "    (left_image.shape[1], left_image.shape[0]),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "# left_mask_to_display = Image.fromarray((left_mask).astype(np.uint8))\n",
-    "# display(left_mask_to_display)"
+    "if mask_method == 'image':\n",
+    "    # read mask\n",
+    "    left_mask = cv2.imread('../data/left_anomaly_2_mask/left_' + '20250917_153919_0' + '.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    # make non black area 255\n",
+    "    left_mask[left_mask > 0] = 255\n",
+    "    # resize mask to model input size\n",
+    "    mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
+    "    mask_rectified = cv2.resize(\n",
+    "        mask_rectified,\n",
+    "        (stereo_model.input_width, stereo_model.input_height),\n",
+    "        interpolation=cv2.INTER_LINEAR,\n",
+    "    )\n",
+    "    # show mask\n",
+    "    plt.imshow(mask_rectified, cmap='gray')\n",
+    "    plt.title('Left Mask Image from file')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7ea894e",
+   "cell_type": "markdown",
+   "id": "64da7d6c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "kernel_size = 5\n",
-    "iterations = 6\n",
-    "kernel = np.ones((kernel_size, kernel_size), np.uint8)\n",
-    "left_mask = cv2.erode(left_mask, kernel, iterations=iterations)\n",
-    "\n",
-    "# Find connected components and keep only the largest one\n",
-    "left_mask_uint8 = left_mask.astype(np.uint8)\n",
-    "num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(left_mask_uint8, connectivity=8)\n",
-    "\n",
-    "# Find the largest component (excluding background which is label 0)\n",
-    "if num_labels > 1:\n",
-    "    largest_component_label = 1 + np.argmax(stats[1:, cv2.CC_STAT_AREA])\n",
-    "    left_mask = (labels == largest_component_label).astype(np.float32) * 255\n",
-    "else:\n",
-    "    left_mask = np.zeros_like(left_mask)\n",
-    "\n",
-    "# Create a copy for flood fill\n",
-    "h, w = left_mask_uint8.shape\n",
-    "flood_fill_mask = np.zeros((h + 2, w + 2), np.uint8)\n",
-    "left_mask_copy = left_mask_uint8.copy()\n",
-    "\n",
-    "# Flood fill from all border pixels\n",
-    "cv2.floodFill(left_mask_copy, flood_fill_mask, (0, 0), 255)\n",
-    "\n",
-    "# Invert the flood filled image and combine with original\n",
-    "left_mask_inv = cv2.bitwise_not(left_mask_copy)\n",
-    "left_mask_filled = left_mask_uint8 | left_mask_inv\n",
-    "\n",
-    "left_mask = left_mask_filled.astype(np.float32)\n",
-    "\n",
-    "mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
-    "mask_rectified = cv2.resize(\n",
-    "    mask_rectified,\n",
-    "    (stereo_model.input_width, stereo_model.input_height),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "\n",
-    "# show mask\n",
-    "plt.imshow(mask_rectified, cmap='gray')\n",
-    "plt.title('Left Mask Image')\n",
-    "plt.axis('off')\n",
-    "plt.show()"
+    "#### Inference"
    ]
   },
   {
@@ -214,6 +271,14 @@
    "source": [
     "# Stereo inference\n",
     "disparity_map = stereo_model(left_tensor, right_tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ea9fce",
+   "metadata": {},
+   "source": [
+    "#### Post processing"
    ]
   },
   {
@@ -247,6 +312,14 @@
     "im1 = plt.imshow(depth_map_proc, cmap='jet')\n",
     "plt.colorbar(im1, label='Depth (m)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e92060",
+   "metadata": {},
+   "source": [
+    "#### Saving"
    ]
   },
   {
