--- a/notebooks/2.0_Stereo_inference.ipynb
+++ b/notebooks/2.0_Stereo_inference.ipynb
@@ -9,11 +9,11 @@
    "source": [
     "import os\n",
     "import cv2\n",
-    "import numpy as np\n",
     "import open3d as o3d\n",
     "import rootutils\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "rootutils.setup_root(\n",
     "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
@@ -22,11 +22,10 @@
     "from src.stereo_inference import StereoInferenceOnnx\n",
     "from src.stereo_calibrate import (\n",
     "    read_stereo_calibration,\n",
-    "    rectify_image,\n",
     "    read_camera_intrinsics,\n",
     ")\n",
     "from src.utils import (\n",
-    "    images_to_tensors,\n",
+    "    StereoImages,\n",
     "    visualize_disparity,\n",
     "    postprocess_disparity,\n",
     "    create_point_cloud,\n",
@@ -59,42 +58,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load images\n",
-    "left_image = cv2.imread('../data/samples/left.png', cv2.IMREAD_COLOR)\n",
-    "right_image = cv2.imread('../data/samples/right.png', cv2.IMREAD_COLOR)\n",
+    "processor = StereoImages(stereo_map_left, stereo_map_right)\n",
+    "proc_result = processor.process(\n",
+    "    '../data/samples/left.png',\n",
+    "    '../data/samples/right.png',\n",
+    "    stereo_model.input_width,\n",
+    "    stereo_model.input_height\n",
+    "    )\n",
+    "\n",
+    "left_tensor, right_tensor = proc_result['tensors']\n",
+    "scale = proc_result['scale']\n",
     "mask_rectified = None\n",
-    "\n",
-    "# Rectify images\n",
-    "left_rectified = rectify_image(left_image, stereo_map_left)\n",
-    "right_rectified = rectify_image(right_image, stereo_map_right)\n",
-    "# bgr to rgb and resize images to the model input size\n",
-    "left_rectified = cv2.cvtColor(left_rectified, cv2.COLOR_BGR2RGB)\n",
-    "right_rectified = cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB)\n",
-    "left_rectified = cv2.resize(\n",
-    "    left_rectified,\n",
-    "    (stereo_model.input_width, stereo_model.input_height),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "right_rectified = cv2.resize(\n",
-    "    right_rectified,\n",
-    "    (stereo_model.input_width, stereo_model.input_height),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "scale = min(\n",
-    "    left_rectified.shape[0] / left_image.shape[0],\n",
-    "    right_rectified.shape[1] / right_image.shape[1],\n",
-    ")\n",
-    "\n",
-    "# Preprocess images for the model\n",
-    "left_tensor, right_tensor = images_to_tensors(left_rectified, right_rectified)\n",
     "\n",
     "# show rectified images\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.imshow(left_rectified)\n",
+    "plt.imshow(proc_result['processed_images'][0])\n",
     "plt.title('Left Rectified Image')\n",
     "plt.axis('off')\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(right_rectified)\n",
+    "plt.imshow(proc_result['processed_images'][1])\n",
     "plt.title('Right Rectified Image')\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -148,7 +130,7 @@
    "source": [
     "# Create point cloud\n",
     "pcd = create_point_cloud(\n",
-    "    disparity_map_proc, left_rectified, K, distance_between_cameras, scale=scale\n",
+    "    disparity_map_proc, proc_result['processed_images'][0], K, distance_between_cameras, scale=scale\n",
     ")\n",
     "\n",
     "# Save point cloud to PLY file\n",
