--- a/notebooks/2.1_Stereo_inference_masked.ipynb
+++ b/notebooks/2.1_Stereo_inference_masked.ipynb
@@ -15,7 +15,7 @@
     "import rootutils\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from helpers.segmentation_inference import SegmentationInferenceOnnx\n",
+    "from helpers.segmentation_inference import SegmentationInferenceOnnx, segmentation_inference\n",
     "\n",
     "rootutils.setup_root(\n",
     "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
@@ -29,7 +29,7 @@
     "    read_camera_intrinsics,\n",
     ")\n",
     "from src.utils import (\n",
-    "    images_to_tensors,\n",
+    "    StereoImages,\n",
     "    visualize_disparity,\n",
     "    postprocess_disparity,\n",
     "    create_point_cloud,\n",
@@ -71,14 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# choose if mask is required.\n",
-    "# 'model' - load segmentation model,\n",
-    "# 'image' - load image,\n",
-    "# None - do nothing\n",
-    "\n",
-    "mask_method = None\n",
-    "if mask_method is None:\n",
-    "    mask_rectified = None"
+    "# mask_path = '../data/left_anomaly_2_mask/left_' + '20250917_153919_0' + '.png'\n",
+    "# mask_path = None\n",
+    "mask_path = 'model'"
    ]
   },
   {
@@ -88,9 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if mask_method == 'model':\n",
+    "if mask_path == 'model':\n",
     "    # Load segmentation model\n",
-    "    segmentation_inference = SegmentationInferenceOnnx(\n",
+    "    segmentation_model = SegmentationInferenceOnnx(\n",
     "        model_path='../models/unet++_lab_seat_segmentation.onnx'\n",
     "    )"
    ]
@@ -112,41 +107,28 @@
    "source": [
     "# load images\n",
     "image_name = '20250917_154307_2'\n",
-    "left_image = cv2.imread('../data/left_anomaly_2/left_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
-    "right_image = cv2.imread('../data/right_anomaly_2/right_' + image_name + '.png', cv2.IMREAD_COLOR)\n",
+    "left_image_path = '../data/left_anomaly_2/left_' + image_name + '.png'\n",
+    "right_image_path = '../data/right_anomaly_2/right_' + image_name + '.png'\n",
     "\n",
-    "# Rectify images\n",
-    "left_rectified = rectify_image(left_image, stereo_map_left)\n",
-    "right_rectified = rectify_image(right_image, stereo_map_right)\n",
+    "processor = StereoImages(stereo_map_left, stereo_map_right)\n",
+    "proc_result = processor.process(\n",
+    "    left_image_path,\n",
+    "    right_image_path,\n",
+    "    stereo_model.input_width,\n",
+    "    stereo_model.input_height\n",
+    "    )\n",
     "\n",
-    "# bgr to rgb and resize images to the model input size\n",
-    "left_rectified = cv2.cvtColor(left_rectified, cv2.COLOR_BGR2RGB)\n",
-    "right_rectified = cv2.cvtColor(right_rectified, cv2.COLOR_BGR2RGB)\n",
-    "left_rectified = cv2.resize(\n",
-    "    left_rectified,\n",
-    "    (stereo_model.input_width, stereo_model.input_height),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "right_rectified = cv2.resize(\n",
-    "    right_rectified,\n",
-    "    (stereo_model.input_width, stereo_model.input_height),\n",
-    "    interpolation=cv2.INTER_LINEAR,\n",
-    ")\n",
-    "scale = min(\n",
-    "    left_rectified.shape[0] / left_image.shape[0],\n",
-    "    right_rectified.shape[1] / right_image.shape[1],\n",
-    ")\n",
-    "\n",
-    "# Preprocess images for the model\n",
-    "left_tensor, right_tensor = images_to_tensors(left_rectified, right_rectified)\n",
+    "left_tensor, right_tensor = proc_result['tensors']\n",
+    "scale = proc_result['scale']\n",
+    "mask_rectified = None\n",
     "\n",
     "# show rectified images\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.imshow(left_rectified)\n",
+    "plt.imshow(proc_result['processed_images'][0])\n",
     "plt.title('Left Rectified Image')\n",
     "plt.axis('off')\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(right_rectified)\n",
+    "plt.imshow(proc_result['processed_images'][1])\n",
     "plt.title('Right Rectified Image')\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -157,7 +139,7 @@
    "id": "bd8020bd",
    "metadata": {},
    "source": [
-    "#### Seat segmentation"
+    "#### Segmentation"
    ]
   },
   {
@@ -167,56 +149,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if mask_method == 'model':\n",
-    "    left_image_mask = left_image.copy()\n",
-    "    left_image_mask = cv2.cvtColor(left_image_mask, cv2.COLOR_BGR2RGB)\n",
-    "    left_image_mask = cv2.resize(left_image_mask, (segmentation_inference.input_width, segmentation_inference.input_height))\n",
-    "    left_image_mask = left_image_mask.astype(np.float32) / 255.0\n",
-    "    left_image_mask = np.transpose(left_image_mask, (2, 0, 1))\n",
-    "    left_image_tensor = np.expand_dims(left_image_mask, axis=0)\n",
-    "\n",
-    "    left_mask = segmentation_inference(left_image_tensor)\n",
-    "    left_mask = np.squeeze(left_mask)\n",
-    "    left_mask = 1 / (1 + np.exp(-left_mask))\n",
-    "    left_mask = (left_mask > 0.5).astype(np.float32) * 255\n",
-    "    left_mask = cv2.resize(\n",
-    "        left_mask,\n",
-    "        (left_image.shape[1], left_image.shape[0]),\n",
-    "        interpolation=cv2.INTER_LINEAR,\n",
-    "    )\n",
-    "    # left_mask_to_display = Image.fromarray((left_mask).astype(np.uint8))\n",
-    "    # display(left_mask_to_display)\n",
-    "\n",
-    "    # prepare mask for rectified image size\n",
-    "    kernel = np.ones((5, 5), np.uint8)\n",
-    "    left_mask = cv2.erode(left_mask, kernel, iterations=6)\n",
-    "\n",
-    "    # Find connected components and keep only the largest one\n",
-    "    left_mask_uint8 = left_mask.astype(np.uint8)\n",
-    "    num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(left_mask_uint8, connectivity=8)\n",
-    "\n",
-    "    # Find the largest component (excluding background which is label 0)\n",
-    "    if num_labels > 1:\n",
-    "        largest_component_label = 1 + np.argmax(stats[1:, cv2.CC_STAT_AREA])\n",
-    "        left_mask = (labels == largest_component_label).astype(np.float32) * 255\n",
-    "    else:\n",
-    "        left_mask = np.zeros_like(left_mask)\n",
-    "\n",
-    "    # Create a copy for flood fill\n",
-    "    h, w = left_mask_uint8.shape\n",
-    "    flood_fill_mask = np.zeros((h + 2, w + 2), np.uint8)\n",
-    "    left_mask_copy = left_mask_uint8.copy()\n",
-    "\n",
-    "    # Flood fill from all border pixels\n",
-    "    cv2.floodFill(left_mask_copy, flood_fill_mask, (0, 0), 255)\n",
-    "\n",
-    "    # Invert the flood filled image and combine with original\n",
-    "    left_mask_inv = cv2.bitwise_not(left_mask_copy)\n",
-    "    left_mask_filled = left_mask_uint8 | left_mask_inv\n",
-    "\n",
-    "    left_mask = left_mask_filled.astype(np.float32)\n",
-    "\n",
-    "    mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
+    "if mask_path == 'model':\n",
+    "    left_image = proc_result['raw_images'][0]\n",
+    "    mask = segmentation_inference(segmentation_model, left_image)\n",
+    "    mask_rectified = rectify_image(mask, stereo_map_left)\n",
     "    mask_rectified = cv2.resize(\n",
     "        mask_rectified,\n",
     "        (stereo_model.input_width, stereo_model.input_height),\n",
@@ -225,30 +161,21 @@
     "\n",
     "    # show mask\n",
     "    plt.imshow(mask_rectified, cmap='gray')\n",
-    "    plt.title('Left Mask Image')\n",
-    "    plt.axis('off')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86b88c4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if mask_method == 'image':\n",
+    "    plt.title('Left Mask Image from file')\n",
+    "\n",
+    "elif mask_path is not None:\n",
     "    # read mask\n",
-    "    left_mask = cv2.imread('../data/left_anomaly_2_mask/left_' + '20250917_153919_0' + '.png', cv2.IMREAD_GRAYSCALE)\n",
+    "    mask = cv2.imread(mask_path, cv2.IMREAD_GRAYSCALE)\n",
     "    # make non black area 255\n",
-    "    left_mask[left_mask > 0] = 255\n",
+    "    mask[mask > 0] = 255\n",
     "    # resize mask to model input size\n",
-    "    mask_rectified = rectify_image(left_mask, stereo_map_left)\n",
+    "    mask_rectified = rectify_image(mask, stereo_map_left)\n",
     "    mask_rectified = cv2.resize(\n",
     "        mask_rectified,\n",
     "        (stereo_model.input_width, stereo_model.input_height),\n",
     "        interpolation=cv2.INTER_LINEAR,\n",
     "    )\n",
+    "\n",
     "    # show mask\n",
     "    plt.imshow(mask_rectified, cmap='gray')\n",
     "    plt.title('Left Mask Image from file')"
@@ -351,6 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "left_rectified = proc_result['rectified_images'][0]\n",
+    "\n",
     "# Create point cloud\n",
     "pcd = create_point_cloud(\n",
     "    disparity_map_proc, left_rectified, K, distance_between_cameras, scale=scale\n",
@@ -365,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "StereoSense",
+   "display_name": "sv",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
