--- a/notebooks/2.1_Stereo_inference_masked.ipynb
+++ b/notebooks/2.1_Stereo_inference_masked.ipynb
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_rectified = proc_result['rectified_images'][0]\n",
+    "left_rectified = proc_result['processed_images'][0]\n",
     "\n",
     "# Create point cloud\n",
     "pcd = create_point_cloud(\n",
