--- a/notebooks/2.2_Stereo_inference_loop.ipynb
+++ b/notebooks/2.2_Stereo_inference_loop.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "    left_tensor, right_tensor = proc_result['tensors']\n",
     "    scale = proc_result['scale']\n",
-    "    left_rectified = proc_result['rectified_images'][0]\n",
+    "    left_processed = proc_result['processed_images'][0]\n",
     "\n",
     "    # Stereo inference\n",
     "    disparity_map = stereo_model(left_tensor, right_tensor)\n",
@@ -100,7 +100,7 @@
     "    cv2.imwrite(f'../output/disp/disparity_map_{img_left_path.stem}.png', cv2.cvtColor(disparity_map_viz, cv2.COLOR_RGB2BGR))\n",
     "    # Create point cloud\n",
     "    pcd = create_point_cloud(\n",
-    "        disparity_map_proc, left_rectified, K, distance_between_cameras, scale=scale\n",
+    "        disparity_map_proc, left_processed, K, distance_between_cameras, scale=scale\n",
     "    )\n",
     "\n",
     "    # Save point cloud to PLY file\n",
