Function for anomaly highlighting

--- a/notebooks/4.2_Pcd_anomaly.ipynb
+++ b/notebooks/4.2_Pcd_anomaly.ipynb
@@ -18,7 +18,12 @@
     "    os.path.abspath(''), indicator=['.git', 'pyproject.toml'], pythonpath=True\n",
     ")\n",
     "\n",
-    "from src.utils import remove_small_clusters, crop_by_height, align_pointclouds, compute_pcd_differences"
+    "from src.utils import (\n",
+    "    remove_small_clusters,\n",
+    "    crop_by_height,\n",
+    "    align_pointclouds,\n",
+    "    highlight_pcd_anomalies\n",
+    ")"
    ]
   },
   {
@@ -102,8 +107,8 @@
    "source": [
     "source_copy = copy.deepcopy(source_pcd)\n",
     "target_copy = copy.deepcopy(target_pcd)\n",
-    "source_copy.paint_uniform_color([1, 0, 0])  # Red for source\n",
-    "target_copy.paint_uniform_color([0, 1, 0])  # Green for target"
+    "#source_copy.paint_uniform_color([1, 0, 0])  # Red for source\n",
+    "#target_copy.paint_uniform_color([0, 1, 0])  # Green for target"
    ]
   },
   {
@@ -144,7 +149,7 @@
    "id": "e372895e",
    "metadata": {},
    "source": [
-    "#### Compute differences"
+    "#### Compute differences and filter outliers"
    ]
   },
   {
@@ -154,8 +159,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance_pcd = compute_pcd_differences(aligned_source, target_copy, max_dist=0.01)\n",
+    "distance_pcd = highlight_pcd_anomalies(aligned_source, target_copy, max_dist=0.015)\n",
     "o3d.visualization.draw_geometries([distance_pcd], window_name=\"Anomaly Map\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a032fbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.io.write_point_cloud('anomaly.ply', distance_pcd)"
    ]
   }
  ],
